--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,12 @@ pandas = ">=2.2.3,<3.0.0"
 matplotlib = ">=3.10.1,<4.0.0"
 seaborn = ">=0.13.2,<0.14.0"
 tqdm = ">=4.67.1,<5.0.0"
-opencv-python = ">=4.12.0.88,<5.0.0.0"
 ipywidgets = ">=8.1.7,<9.0.0"
 torchinfo = ">=1.8.0,<2.0.0"
 nbformat = ">=5.10.4,<6.0.0"
 wandb = ">=0.22.1,<0.23.0"
 scikit-learn = "^1.7.2"
+opencv-python = "^4.12.0.88"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
