--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ wandb = ">=0.22.1,<0.23.0"
 scikit-learn = "^1.7.2"
 opencv-python = "^4.12.0.88"
 albumentations = "^2.0.8"
+scikit-image = "^0.25.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
